# LectitioLexicanus

./: .gitignore  Cargo.toml  dict.py  filter.py  kindlegen.py  lexicanum.py  readme.md
.github/workflows/: main.yml  prerelease.yml  release.yml
dict/: cover.html  dict.opf  usage.html
src/: main.rs
