[package]
name = "LectitioLexicanum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
kdam = { version = "0.4.1", features = ["rich", "spinner", "rayon", "template", "gradient"] }
once_cell = "1.18.0"
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["blocking"] }
stderr = "0.8.0"

[profile.release]
lto = false
